--- a/Applications/Terminal.app/package.json
+++ b/Applications/Terminal.app/package.json
@@ -7,6 +7,7 @@
   "author": "GitHub",
   "license": "MIT",
   "dependencies": {
+    "shared": "file:../../System/Shared",
     "express": "^4.17.1",
     "node-pty": "^0.10.1",
     "websocket": "^1.0.34",
