--- a/System/Kernel/package.json
+++ b/System/Kernel/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "terminal",
-  "productName": "Electron API Demos",
-  "version": "2.0.2",
-  "description": "Electron interactive API demos",
+  "name": "Kernel",
+  "productName": "Kernel",
+  "version": "1.0.0",
+  "description": "Kernel",
   "main": "main.js",
-  "bin": "cli.js",
   "scripts": {
     "start": "electron ."
   },
-  "author": "GitHub",
+  "author": "OnFlApp",
   "license": "MIT",
   "dependencies": {
-    "elfinder-node": "^1.0.2",
+    "shared": "file:../Shared",
     "express": "^4.17.1",
-    "node-pty": "^0.10.1",
-    "websocket": "^1.0.34",
-    "xterm": "^4.12.0",
-    "xterm-addon-attach": "^0.6.0",
-    "xterm-addon-fit": "^0.5.0"
+    "websocket": "^1.0.34"
   }
 }
