--- a/System/Dispatcher/package.json
+++ b/System/Dispatcher/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "Kernel",
-  "productName": "Kernel",
+  "name": "Dispatcher",
+  "productName": "Dispatcher",
   "version": "1.0.0",
-  "description": "Kernel",
+  "description": "Dispatcher",
   "main": "main.js",
-  "scripts": {
-    "start": "electron ."
-  },
   "author": "OnFlApp",
   "license": "MIT",
   "dependencies": {
