--- a/System/Services/Dispatcher/package.json
+++ b/System/Services/Dispatcher/package.json
@@ -7,7 +7,7 @@
   "author": "OnFlApp",
   "license": "MIT",
   "dependencies": {
-    "shared": "file:../Shared",
+    "shared": "file:../../Shared",
     "express": "^4.17.1",
     "websocket": "^1.0.34"
   }
