--- a/System/Services/Launcher/package.json
+++ b/System/Services/Launcher/package.json
@@ -7,6 +7,7 @@
   "author": "OnFlApp",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.21.2",
     "socket.io-client": "^4.8.1"
   }
 }
