--- a/System/Services/Display/package.json
+++ b/System/Services/Display/package.json
@@ -7,8 +7,8 @@
   "author": "onflapp",
   "license": "MIT",
   "dependencies": {
+    "socket.io-client": "^4.8.1",
     "x11": "^2.3.0",
-    "xinput": "^0.5.0",
-    "socket.io-client": "^4.8.1"
+    "xinput": "^0.5.0"
   }
 }
