--- a/System/Services/SystemController.wap/package.json
+++ b/System/Services/SystemController.wap/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "DBus",
-  "productName": "DBus",
+  "name": "SystemServices",
+  "productName": "SystemServices",
   "version": "1.0.01",
-  "description": "DBus",
+  "description": "SystemServices",
   "main": "main.js",
   "author": "OnFlApp",
   "license": "MIT",
