--- a/System/Widgets/Desktop.wap/package.json
+++ b/System/Widgets/Desktop.wap/package.json
@@ -7,6 +7,7 @@
   "author": "onflapp",
   "license": "MIT",
   "dependencies": {
-    "jquery": "^3.7.1"
+    "jquery": "^3.7.1",
+    "xsel": "^1.0.0"
   }
 }
