--- a/System/Services/SystemController.wap/package.json
+++ b/System/Services/SystemController.wap/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "dbus-next": "^0.10.2",
+    "decache": "^4.6.2",
     "pulseaudio.js": "^1.3.4",
     "socket.io-client": "^4.8.1"
   }
