--- a/System/Services/StorageController.wap/package.json
+++ b/System/Services/StorageController.wap/package.json
@@ -8,6 +8,6 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^4.8.1"
+    "socket.io-client": "^4.8.1"
   }
 }
